styles.css
body, html {
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;
  padding-top: 2.3rem;
  background-image: url(./images/background-image.webp);
  /* background-image: url(./images/background-image2.webp); */
  background-position: center;
  background-size: cover;
}

/* Top Navbar */
header {
  width: 100%;
  height: 8vh;
  top: 0;
  padding-top: .5rem;
  padding-bottom: .5rem;
  margin: 0 auto;
  position: fixed;
  background-image: url(./images/nav-image.webp);
  background-position: center;
  background-size: cover;
  box-shadow: 0 .625rem 1.875rem rgba(76, 55, 208,.1);
  z-index: 999;
}
nav {
  display: flex;
  font-family: 'Cedarville Cursive', cursive;
  font-size: 1.2rem;
  letter-spacing: .02rem;
  line-height: 8vh;
  color: #2F2E41;
  margin-left: 2vw;
}
nav h1 {
  margin: 0;
}
nav h1:hover {
  cursor: pointer;
}
.hiddenButton {
  width: 50vw;
  height: 8vh;
  z-index: 1000;
  cursor: pointer;
  background-position: center;
}
.socialLinks{
  width: 100vw;
  height: 8vh;
  position: relative;
  background-image: none;
  display: flex;
  justify-content: flex-end;
  margin-top: -8vh;
  margin-left: -2vw;
}
.socialLink{
  cursor:pointer;
  padding-left:.5rem;
  position:relative;
  top: 50%;
  transform: translatey(-50%);
  z-index:5;
}

/* Hero */
.landingPage {
  height: 85vh;
  width: 100vw;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
}
.landingContent {
  width: 35vw;
  margin-left: 3vw;
  margin-right: 3vw; 
  padding-right: 1vw;
  display: flex; 
  flex-direction: column; 
  align-items: flex-start; 
  justify-content: center; 
}
.landingContent h1 {
  font-size: 2rem;
  margin: 0;
  text-align: left;
  font-family: 'DM Sans', sans-serif;
  color: #2F2E41;
  position: relative;
  z-index: 3;
  font-weight: 550;
}
#blue {
  color: #4169E1;
}
#swap {
  /* color: #1D263B; */
  color: #2F2E41;
  cursor: auto;
}
#coming-soon {
  cursor: auto;
  transform: none;
  background-color: transparent;
}
.seeProjectsBtn {
  font-size: 1rem;
  letter-spacing: 0.04rem;
  text-transform: uppercase;
  line-height: 1rem;
  padding: 1rem;
  border: .1rem solid #24AFC5;
  border-radius: .6rem;
  margin-top: 5vh;
  font-family: 'Roboto', sans-serif;
  font-weight: bold; 
  cursor: pointer;
  color: #24AFC5;
  background-color: #C2EDF4;  
  z-index: 10;
  transition: transform 0.3s ease; /* Smooth transition for the scale effect */
}
.seeProjectsBtn:hover {
transform: scale(1.1);
}
.heroImage {
  width: 65vw;
  height: fit-content;
}
.heroImage img {
  width: 100%;
  height: auto;
}

/* Projects */ 
#projects {
  min-height: 95vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-position: center;
  background-size: cover;
  margin: 0 auto;
}
.projectSection {
  width: 100vw;
  margin: 0 auto;
  padding: 0rem;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding-bottom: 2rem;
}
.project {
  width: 23vw;
  height: fit-content;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* background-image: url(./images/nav-image.webp); */
  background-color: white;

  box-shadow: 0 .625rem 1.875rem rgba(76, 55, 208,.05);
  transition: box-shadow 0.3s ease;
  padding-bottom: 2rem;
  border-radius: 1rem;
  border: .15rem solid #C2EDF4;
  margin-top: 4vh;
  padding-bottom: 4rem;
  position: relative;
  
}
.title {
  height: 9vh;
  padding: .6rem;
}
.project h2 {
  width: fit-content;
  margin: 0;
  font-family: 'DM Sans', sans-serif;
  font-size: 1.4rem;
  font-weight: 550;
  letter-spacing: -0.05rem;
  line-height: 4vh;
  color: #2F2E41;
  position: relative;
  top: 50%;
  transform: translatey(-50%);
  text-align: center;
  /* padding-top: 1rem; */
  /* padding-bottom: 1rem; */
}
.subTitle {
  height: 4vh;
  padding-left: .5rem;
  padding-right: .5rem;
  padding-bottom: .5rem;
 }
.project h3 {
  width: fit-content;
  font-size: 1.1rem;
  line-height: 1.5rem;
  margin: 0;
  font-weight: 400;
  font-family: 'Roboto', sans-serif;
  text-align: center;
  color: #667085;
  position: relative;
  top: 50%;
  transform: translatey(-50%);
}
.project:hover {
  box-shadow: 0 .625rem 1.875rem rgba(76, 55, 208,.2);
}
.project img {
  width: 20rem;
  /* height: 20rem; */
  height: fit-content;
}
#stretch {
  padding-top: 1rem;
  padding-bottom: 1rem;
}
.project button {
  font-family: 'Roboto', sans-serif;
  font-weight: bold; 
  font-size: 1rem;
  letter-spacing: 0.04rem;
  line-height: 1rem;
  color: #24AFC5;
  background-color: #C2EDF4;
  border: .1rem solid #24AFC5;
  border-radius: .6rem;
  cursor: pointer;
  padding: 1rem;
  text-transform: uppercase;
  position: absolute;
  bottom: 0;
  margin-bottom: 1rem;
  transition: transform 0.3s ease; /* Smooth transition for the scale effect */
}

.project button:hover {
  transform: scale(1.1);
  }

/* Footer */
footer {
  width: 100%;
  height: 3vh;
  margin: 0 auto;
  background-image: url(./images/nav-image.webp);
  background-position: center;
  background-size: cover;
  text-align: center;
  border-top: .15rem solid #C2EDF4;
  position: fixed;
  bottom: 0;
  left: 0;
  z-index: 999;
  padding-top: 1vh;
  padding-bottom: 1vh;
  font-size: 1rem;
  letter-spacing: 0.0390625vw;
  line-height: 3vh;
  margin: 0;
  font-weight: 400;
  font-family: 'Roboto', sans-serif;
  /* color: #1D263B; */
  color: #2F2E41;
}

/* Project Details */
.caseStudy {
  width: 100vw;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  z-index: 0;
  overflow-y: none;
  margin-top: 4vh;
  background-position: center;
  background-size: cover;
}
.caseStudy button {
  font-family: 'Roboto', sans-serif;
  font-weight: bold; 
  font-size: 1rem;
  letter-spacing: 0.04rem;
  line-height: 1rem;
  color: #24AFC5;
  background-color: #C2EDF4;
  border: .1rem solid #24AFC5;
  border-radius: .6rem;
  padding: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  width: fit-content;
}
/* ... */

